@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtcontrib.1,v 1.20 2008/11/10 19:08:17 greg Exp $"
+.\" RCSid "$Id: rtcontrib.1,v 1.21 2009/06/14 00:33:15 greg Exp $"
 .TH RTCONTRIB 1 5/25/05 RADIANCE
 .SH NAME
 rtcontrib - compute contribution coefficients in a RADIANCE scene
@@ -292,5 +292,5 @@ RAYPATH		path to search for \-f and \-M files
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-cnt(1), getinfo(1), pcomb(1), pfilt(1), ra_rgbe(1),
+cnt(1), genklemsamp(1), getinfo(1), pcomb(1), pfilt(1), ra_rgbe(1),
 rcalc(1), rpict(1), rtrace(1), total(1), vwrays(1), ximage(1)
