@@ -1,20 +1,25 @@
-.\" RCSid "$Id: vwright.1,v 1.7 2008/11/10 19:08:17 greg Exp $"
+.\" RCSid "$Id: vwright.1,v 1.8 2009/06/14 00:33:15 greg Exp $"
 .TH VWRIGHT 1 8/29/96 RADIANCE
 .SH NAME
 vwright - normalize a RADIANCE view, shift it to the right
 .SH SYNOPSIS
 .B vwright
+.B "[ view options ]"
 .B distance
 .br
 .B vwright
 .B name
 .SH DESCRIPTION
 .I Vwright
-shifts a RADIANCE view from a picture or view file given on the standard input
+shifts a RADIANCE view
 the specified distance to the right, putting out a complete set of
 view parameters in a single line on the standard output.
 This utility is most often used to compute a right-eyed view from
 a left-eye view for stereo imaging.
+.PP
+If no options are specified on the command line,
+.I vwright
+reads a view from its standard input.
 .PP
 The
 .I distance
